syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "WeatherForecastSvc.Endpoint.Proto";

package weather_forecast_service;

service WeatherForecastSvc {
    rpc AddWebPageSliceV1(AddWebPageSliceRequest) returns (AddWebPageSliceResponse);
    rpc AddCitiesV1(AddCitiesRequest) returns (AddCitiesResponse);
}

message AddWebPageSliceRequest {
    google.protobuf.Timestamp timestamp = 1;
    repeated CityForecast city_forecasts = 2;
}

message AddWebPageSliceResponse {
    
}

message AddCitiesRequest { 
    repeated City cities = 1;
}

message City {
    string name = 1;
    string link = 2;
}

message AddCitiesResponse {
}

message CityForecast {
    string city_name = 1;
    repeated WeatherForecast forecasts = 2;
}

message WeatherForecast {
    google.protobuf.Timestamp date = 1;
    string summary = 2;
    int32 min_temp_c = 3;
    int32 max_temp_c = 4;
    int32 wind_ms = 5;
    double precipitation_mm = 6;
}